@@ -107,6 +107,7 @@ fixed formatting. Tomasz Flendrich
 * Updated generate_test_runner.rb and updated the sntp/unity/auto directory
   with the latest Unity updates from Mark. Damir Tomić.
 * Retire google test - phase I.  Harlan Stenn.
+* Unity test cleanup: move declaration of 'initializing'.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
